# gsc-2025

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compressed.br  decompressed.txt  readme.txt
data/: filePath.txt
include/xxhash/: xxh3.h
lib/: libtbb.so.12  libtbbmalloc.so.2
scripts/py/: createBitMatirx.py
src/: brotli.hpp  main.cpp  mmap.cpp  mmap.hpp
src/test/: tbbParrllelTest.cpp
src/tmp/: hash_table8.hpp  spdlogTest.cpp
tests/: test.cpp
